[package]
name = "libtor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
regex = "1"
semver = "1"
openssl = { version = "0.10", features = ["vendored"] }
