[package]
name = "torrosion"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/AS207960/libtor"
authors = ["Q Misell <q@as207960.net>"]
description = "A Tor library for Rust"
readme = "../README.md"
homepage = "https://acmeforonions.org"
license = "MIT"
exclude = ["/update_fallback.sh"]

[dependencies]
hex = "0.4"
log = "0.4"
rand = "0.7"
regex = "1"
semver = "1"
lazy_static = "1"
chrono = "0.4"
byteorder = "1"
ring = "0.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-rustls = "0.23"
tokio-stream = { version = "0.1", features = ["io-util"] }
x509-parser = "0.14"
oid-registry = "0.6"
rsa = "0.7"
aes = "0.8"
ctr = "0.9"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
futures = "0.3"
async-compression = { version = "0.3", features = ["tokio", "zlib", "zstd", "xz"] }
async-native-tls = { version = "0.4", features = ["runtime-tokio"], default-features = false }
base64 = "0.21"
base32 = "0.4"
sha3 = "0.10"
curve25519-dalek = "4.0.0-rc.1"
ed25519-dalek = "1"
x25519-dalek = "1"
hkdf = "0.12"
sha2 = "0.10"
http = "0.2"
digest = "0.10.6"
sha1 = "0.10.5"
async-trait = "0.1.66"
